--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="search">Search</string>
     <string name="notification">Notification</string>
     <string name="favourites">Favourites</string>
+    <string name="delicious_food">Delicious Food</string>
 </resources>
